# mucaml

./: CLAUDE.md  README.md  dune-project  test_string.ml  test_string.toml
backend/: arm_dsl.ml  arm_dsl.mli  dune  emit.ml  import.ml  linscan.ml  mucaml_backend.ml  register.ml
backend/arm/: arm_dsl.ml  arm_dsl.mli  cpu.ml  dune  emit.ml  import.ml  mucaml_backend_arm.ml  register.ml
backend/arm64/: arm_dsl.ml  arm_dsl.mli  cpu.ml  dune  emit.ml  import.ml  mucaml_backend_arm64.ml  register.ml
backend/common/: backend_intf.ml  dune  env.ml  import.ml  linscan.ml  parallel_move.ml  parallel_move.mli  triple.ml
backend/llvm/: dune  import.ml  llvm_ir_gen.ml  mucaml_backend_llvm.ml
example/: dune
example/branches/: branches.t  dune  main.ml  mucaml.toml
example/hello_world/: hello_world.elf  hello_world.elf.ll  hello_world.t  main.c  main.ml  mucaml.toml  program.s
example/qemu/: blinky.elf  link.x  linker.ld  main.ml  mucaml.toml  qemu.t
example/rpi/: blinky.elf  blinky.uf2  device.x  linker.ld  main.ml  memory.x  mucaml.toml  program.s  rpi.t
example/string_test/: main.ml  mucaml.toml  string_test.t
example/test_call/: main.ml  mucaml.toml  test_call.t
frontend/: ast.ml  dune  identifier.ml  import.ml  lexer.mll  located.ml  parse.ml  parse.mli  parser.messages  parser.mly  type.ml
lib/: arm_dsl.ml  arm_dsl.mli  ast.ml  backend_intf.ml  dune  emit.ml  env.ml  import.ml  mucaml.ml  parse.ml  parse.mli  parser.messages  parser.mly  project.ml  register.ml  rpi_binary_info.ml  target.ml  target.mli  type.ml
middle/: cmm.ml  dune  import.ml  legalize.ml  mirl.ml  mirl.mli
ox/: dune  i32.ml  i64.ml  nonempty_list.ml  ox.ml
runtime/: Cargo.toml  build.rs  build.zig  build.zig.zon  memory.x
runtime/.cargo/: config.toml
runtime/.claude/: settings.local.json
runtime/rpi/: lib.rs
runtime/src/: lib.rs  micro.zig  program.s  rpi.zig  runtime.zig  stm32.zig
test/: dune  helpers.ml  import.ml  test_cmm.ml  test_i64_args_arm32.ml  test_i64_args_fix_validation.ml  test_i64_frontend.ml  test_i64_return_arm32.ml  test_legalize.ml  test_legalize_standalone.ml  test_mirl.ml  test_mucaml.ml  test_parser.ml  test_register_allocation_stress.ml  test_register_spilling.ml  test_typing.ml
typing/: NOTES.md  annotation.ml  constraint.ml  diagnostic.ml  dune  env.ml  import.ml  mucaml_typing.ml  solver.ml  type.ml  typed_ast.ml  typing.ml  unification.ml
union-find/: dune  import.ml  union_find.ml
