(library
 (name mucaml_frontend)
 (libraries ox grace linenoise menhirLib)
 (preprocess
  (pps ppx_jane)))

(ocamllex lexer)

(menhir
 (modules parser))

(menhir
 (modules recovery_parser)
 (flags --table --external-tokens Parser))

(rule
 (action
  (with-stdout-to
   recovery_parser.mly
   (run menhir %{dep:parser.mly} --only-preprocess-u))))

(rule
 (deps parser_messages.check)
 (action
  (with-stdout-to
   parser_messages.ml
   (run menhir %{dep:parser.mly} --compile-errors %{dep:parser.messages}))))

(rule
 (with-stdout-to
  parser.auto.messages
  (run menhir %{dep:parser.mly} --list-errors)))

(rule
 (with-stdout-to
  parser_messages.check
  (run
   menhir
   %{dep:parser.mly}
   --compare-errors
   %{dep:parser.auto.messages}
   --compare-errors
   %{dep:parser.messages})))
