[package]
authors = ["Matt Else <matthewelse1997@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "mucaml-runtime"
version = "0.1.0"

[dependencies]
cortex-m-rt = { version = "0.7", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }

panic-semihosting = "0.6.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[features]
cortex-m = ["dep:cortex-m-rt", "dep:cortex-m-semihosting"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # size optimizations
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
cc = "1.2.27"

[lib]
crate-type = ["staticlib"]

