[package]
authors = ["Matt Else <matthewelse1997@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "mucaml-runtime"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = { version = "0.5" }

# panic-semihosting = "0.6.0"

rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
embedded-alloc = { version = "0.6.0" }
embedded-hal = { version = "1.0.0" }
panic-halt = "1.0.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # size optimizations
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
cc = "1.2.27"

[lib]
crate-type = ["staticlib"]

